# video-special-effects-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  readme.txt
include/: DA2Network.hpp  StyleNetwork.hpp  filter.h
src/: filter.cpp  imgDisplay.cpp  test.py  timeBlur.cpp  vidDisplay.cpp
